Fix stretched link style

--- a/nodes/public/stylesheets/style.css
+++ b/nodes/public/stylesheets/style.css
@@ -452,6 +452,11 @@ input::placeholder {
   background-color: rgba(0, 0, 0, 0.25);;
 }
 
+.stretched-link, .stretched-link:hover {
+  color: black;
+  text-decoration: none;
+}
+
 .stretched-link:hover +.card-img +.card-img-overlay {
   background-color: #faee84;
   color: black;
